core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/ok/enrich3.yf
---
name: echo
graphs:
  start:
    - type: Echo
      put: actdetail
      value: [3]

    - type: Echo
      put: enriched
      value:
        id: "[actdetail^0]"

    - type: IntConsumer
      input: "{enriched@id}"


