core-plugins/src/test/resources/scraper/test/plugins/core/typechecker/fail/multimapaccess.yf
---
name: complex
graphs:
  start:
    # jsonobj :: Object
    - type: JsonStringToObject
      jsonString: "somejsonstringobject"
      jsonObject: "jsonobj"

    # jsonobj :: List<A>
    # item :: A
    - type: Echo
      put: item
      value: "[jsonobj^0]"

    # item :: String
    # item :: Map<String, A> fail !
    - type: TwoInputs
      input1: "{item}"
      input2: "{item@id}.png"

